<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.project.moviecatalogue.ui.movie.list.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.project.moviecatalogue.ui.tvshow.list.TvShowFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.project.moviecatalogue.ui.favorite.FavoriteFragment"
        android:label="@string/favorit"
        tools:layout="@layout/fragment_favorite"/>

</navigation>