<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.detail.DetailMovieActivity"
    android:padding="@dimen/pading_normal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/width_poster"
            android:layout_height="@dimen/height_poster"
            app:cardCornerRadius="@dimen/card_radius">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_poster_movie_1" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_medium">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="@dimen/size_title"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_durasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/durasi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_durasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rilis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_rilis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_usia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usia">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_usia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pading_normal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_small">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_small">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularitas" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_popularitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularitas" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_small">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/pading_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:layout_marginBottom="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/size_sub_title"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>